# PEPLProbes

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: testing.yaml
src/PEPLProbes/: pepl_probes.py
src/PEPLProbes/utils/: differentiate.py
tests/: test_example.py
